@@ -1,4 +1,3 @@
-
 = To Do =
 
 * Figure out why only alerts are being translated 
